# baikal-t-pulse-cntr

./: CMakeLists.txt  config.h.in
src/: crc8.c  crc8.h  pulse-cntr.c  pulse-cntr.h
